--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -26,10 +25,11 @@ html {
     margin-bottom: 30px;
 }
 
-
-.google-button {
-    display: inline-flex;
-    align-items: center;
+.google-button,
+.github-button {
+    display: flex;
+    margin-bottom: 20px;
+    width: 270px;
     background-color: #ffffff;
     color: #001a33;
     border: 2px solid #001a33;
@@ -41,16 +41,22 @@ html {
     transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
-.google-button:hover {
+.google-button:hover,
+.github-button:hover {
     background-color: #12283d;
     color: #ffffff;
     box-shadow: 0 0 20px rgb(253, 252, 252);
     transform: scale(1.05);
 }
 
-.google-button svg {
+.google-button svg,
+.github-button svg {
     margin-right: 8px;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     fill: currentColor;
+}
+
+.github-button:hover svg {
+    filter: invert(1);
 }
