--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -16,6 +16,9 @@ html {
 }
 
 .login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
@@ -25,12 +28,19 @@ html {
     margin-bottom: 30px;
 }
 
+.button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .google-button,
 .github-button {
     display: flex;
     margin-bottom: 20px;
     width: 270px;
     background-color: #ffffff;
+    align-items: center;
     color: #001a33;
     border: 2px solid #001a33;
     padding: 12px 24px;
