--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -25,10 +25,11 @@ html {
 }
 
 .logo {
-    width: 80px;
-    height: 80px;
-    margin-bottom: 1rem;
-    animation: bounceIn 1s ease-in-out;
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1rem;
+        animation: bounceIn 1s ease-in-out;
 }
 
 .title {
