--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -26,10 +26,10 @@ html {
 
 .logo {
     display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 1rem;
-        animation: bounceIn 1s ease-in-out;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    animation: bounceIn 1s ease-in-out;
 }
 
 .title {
@@ -40,16 +40,17 @@ html {
 }
 
 .button {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     padding: 0.75rem 1.5rem;
     border: none;
     border-radius: 0.5rem;
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 1.2rem;
+    font-weight: 600;
     color: white;
-    background-color: #2563eb;
+    background-color: #05266e;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
     position: relative;
@@ -137,7 +138,7 @@ html {
 
     .button {
         padding: 0.5rem 1rem;
-        font-size: 0.875rem;
+        font-size: 0.975rem;
     }
 
     .button-icon {
