--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -59,6 +59,7 @@ html {
     padding: 0.75rem 1.5rem;
     border: none;
     border-radius: 0.5rem;
+    margin-bottom: 5px;
     font-size: 1.2rem;
     font-weight: 600;
     color: white;
