--- a/src/app/(auth)/login/login.css
+++ b/src/app/(auth)/login/login.css
@@ -112,27 +112,29 @@ html {
         opacity: 1;
     }
 }
-
 @keyframes bounceIn {
     0% {
         opacity: 0;
         transform: scale(0.3);
+        animation-timing-function: ease-out;
     }
 
     50% {
         opacity: 1;
         transform: scale(1.05);
+        animation-timing-function: ease-in-out;
     }
 
     70% {
         transform: scale(0.9);
+        animation-timing-function: ease-in-out;
     }
 
     100% {
         transform: scale(1);
+        animation-timing-function: ease-out;
     }
 }
-
 .button-icon {
     width: 30px;
     height: 30px;
