--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,5 +1,6 @@
 /* styles.css */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -119,27 +120,6 @@ body {
     animation: fadeIn 0.5s ease-in-out;
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@media (max-width: 640px) {
-    .card-content {
-        padding: 1.5rem;
-    }
-
-    .input-group {
-        gap: 0.5rem;
-    }
-
-    .input-group .input,
-    .input-group .button {
-        width: 100%;
-    }
+.icon {
+    margin-right: 0.25rem;
 }
