--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -86,7 +86,7 @@ body {
     border-color: #f56565;
 }
 
-.button {
+.button-add {
     background-color: #5a67d8;
     color: #ffffff;
     padding: 0.75rem 1rem;
@@ -95,12 +95,12 @@ body {
     cursor: pointer;
 }
 
-.button:hover {
+.button-add:hover {
     background-color: #434190;
     transform: scale(1.05);
 }
 
-.button:disabled {
+.button-add:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
